# code-search-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  install.ps1
.gitea/workflows/: mirror-github.yml  quality-gate.yml  release-assets.yml
.github/workflows/: release.yml
docs/: 00-design-summary.md  01-architecture.md  02-command-contract.md  03-quality.md  12-competitive-analysis-report.html  13-implementation-tasks.md  15-l0-test-plan-ruoyi.md  16-benchmark-plan.md  17-swebench-evaluation-plan.md  18-quality-guard-test-architecture.md  19-performance-optimization-technical-plan.md
docs/reports/: 2026-05-29-ruoyi-code-search-cli-e2e.html
docs/tasks/: T04-parser-facts.md
scip-indexer/: .gitignore  go.mod  main.go
scripts/: analyze_swebench.py  bench.sh  prepare-ruoyi-fixture.sh  quality-gate.sh  upload-gitea-release-assets.sh
scripts/baseline_values/: callers  calls  changed  completions  defs  files  find  find-indexed  find-path  glob  grep  help  index-build-cold  index-build-warm  list  read  refs  status  symbols
skills/codetrail/: SKILL.md
skills/codetrail/agents/: README.md  openai.yaml
skills/codetrail/agents/codex/: codetrail-evidence.toml
skills/codetrail/agents/opencode/: codetrail-evidence.md
src/: batch_query.rs  cli.rs  commands.rs  completions.rs  config_facts.rs  diff_proof.rs  go_provider.rs  index.rs  lancedb_store.rs  lib.rs  main.rs  output.rs  project_graph.rs  rust_provider.rs  saved_query.rs  scip_index.rs  scip_indexer.rs  search.rs  semantic_facts.rs  semantic_provider.rs  snapshot_store.rs  syntax.rs  text_index.rs  ts_provider.rs  workspace.rs
src/config_facts/: containers.rs  ini.rs  json.rs  mod.rs  mybatis.rs  scripts.rs  support.rs  toml.rs  yaml.rs
src/graph/: builder.rs  mod.rs  schema.rs
src/lsp/: client.rs  scip_gen.rs  transport.rs
src/mcp/: mod.rs  protocol.rs
src/output/: enrichment.rs  jsonl.rs  progress.rs  projection.rs  text.rs
src/output/enrichment/: command.rs  guidance.rs
src/output/text/: status.rs
src/query/: mod.rs
src/scheduler/: mod.rs
src/scip/: mod.rs  store.rs
src/watcher/: mod.rs  reconcile.rs
tests/: cli.rs  config_facts.rs  lsp_scip.rs  mcp_remote.rs  mybatis_config_facts.rs  project_graph.rs  semantic_facts.rs  semantic_provider.rs  workspace_paths.rs
tests/cli-integration/: run-tests.sh
tests/fixtures/: fake_lsp_server.rs
