[package]
name = "code-search-cli"
version = "0.1.0"
edition = "2021"
description = "确定性优先、带可靠性标注的代码搜索 CLI。"
license = "MIT"

[lib]
name = "code_search_cli"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "code-search"
path = "src/main.rs"
[dependencies]
anyhow = "1"
futures = "0.3"
blake3 = "1"
clap = { version = "4", features = ["derive", "env"] }
ignore = "0.4"
globset = "0.4"
lancedb = "0.17"
memmap2 = "0.9"
notify = "8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
arrow = { version = "53", default-features = false }
parquet = { version = "53", default-features = false, features = ["arrow"] }
prost = "0.13"
prost-types = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }
petgraph = { version = "0.6", features = ["serde"] }
bincode = "1"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"


[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["json"] }
predicates = "3"
tempfile = "3"
prost = "0.13"

[build-dependencies]
prost-build = "0.13"
