[package]
name = "codetrail"
version = "0.1.7-beta.1"
edition = "2021"
description = "CodeTrail: 确定性优先、带可靠性标注的代码搜索 CLI。"
license = "MIT"

[lib]
name = "codetrail"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "codetrail"
path = "src/main.rs"

[[bin]]
name = "fake-lsp-server"
path = "tests/fixtures/fake_lsp_server.rs"
test = true
[dependencies]
anyhow = "1"
futures = "0.3"
blake3 = "1"
clap = { version = "4", features = ["derive", "env"] }
dunce = "1"
ignore = "0.4"
globset = "0.4"
lancedb = "0.30"
memmap2 = "0.9"
notify = "8"
regex = "1"
quick-xml = "0.38"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
toml = "0.8"
tree-sitter = "0.24"
tree-sitter-go = "0.23.4"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
arrow = { version = "58", default-features = false, features = ["ipc"] }
prost = "0.13"
prost-types = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }
petgraph = { version = "0.6", features = ["serde"] }
bincode = "1"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"


[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["json"] }
predicates = "3"
prost = "0.13"

[build-dependencies]
prost-build = "0.13"
